--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "radiotron-proxy",
   "version": "1.0.0",
-  "description": "Proxy per Radio Radiotron",
-  "main": "index.js",
+  "main": "index-proxy.js",
+  "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index-proxy.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "node-fetch": "^2.6.7"
+    "node-fetch": "^3.3.2"
   }
 }
