--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index-proxy.js",
   "type": "module",
   "scripts": {
-    "start": "node index-proxy.js"
+    "start": "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
