--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "start": "node index.js"
   },
-  "dependencies": {
-    "express": "^4.18.2",
-    "node-fetch": "^3.3.2"
-  }
+ "dependencies": {
+  "express": "^4.18.2",
+  "node-fetch": "^3.3.2",
+  "cors": "^2.8.5"
+}
 }
